--- a/src/Pages/Services/Services.css
+++ b/src/Pages/Services/Services.css
@@ -1,39 +1,35 @@
-.about .container{
-    text-align:center;
-}
-.about-title{
+.service-top{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    margin: 20px 0;
 }
-.about-subtitle{
-    width: 400px;
-    color: #6E7191;
-}
-.about-cards{
+
+.services-cards{
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.about-img{
+.services-img{
 width: 450px;
 height: 300px;
 border-radius: 25px;
 padding: 5px 0;
 transition: all 0.7s ease;
 }
-.about-img:hover{
-    transform: scale(.9);
+.services-img:hover{
+    transform: scale(0.9);
 }
-.about-text{
+.services-text{
 color:#211F54;
 padding: 5px 0;
+text-align: center;
 }
-.about-info{
+.services-info{
     color: #6E7191;
+    text-align: center;
 }
-.about-btns{
+.services-btns{
     display:flex;
     align-items: center;
     justify-content: center;
