--- a/src/Pages/Treatment/Treatment.css
+++ b/src/Pages/Treatment/Treatment.css
@@ -1,6 +1,47 @@
-
-
-
+.Treatment{
+    margin: 10px 0;
+}
+.Treatment .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color:  #211F54;
+    border-radius: 50px;
+    padding: 10px 20px;
+}
+.Treatment-img{
+    width: 600px;
+    height: 600px;
+    object-fit: cover;
+}
+.Treatment-title{
+    padding: 10px 0;
+    font-size: 18px;
+}
+.Treatment-subtitle{
+    font-family: sans-serif;
+    font-size: 48px;
+    font-weight: 700;
+}
+.Treatment-text{
+font-size: 21px;
+font-weight: 400;
+padding: 20px 0;
+}
+.Treatment-button{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 10px 0;
+}
+.Treatment-right{
+    width: 500px;
+    height: 500px;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 
 /* Treatment btn */
 .Treatment-button{
@@ -9,13 +50,18 @@
     align-items: center;
     justify-content: space-between;
 }
+.Treatment-image{
+    width: 70px;
+    height: 70px;
+}
 .Treatment-info{
     display: flex;
 flex-direction: column;
 }
 .Treatment-anchor{
-color: #3D3B69;
+color: #fff;
 padding-top: 3px;
+font-size: 26px;
 }
 /* .home-right{
     width: 700px;
