--- a/src/Pages/Articles/Articles.css
+++ b/src/Pages/Articles/Articles.css
@@ -20,11 +20,14 @@
 }
 .Article-card{
     margin: 20px 0;
-    width: 596px;
-    height: 630px;
+    width: 650px;
+    height: 450px;
+   
 }
 .Articles-img{
-    width: 596px;
-height: 366px;
-
+    width: 100%;
+    border-radius: 10px;
+}
+.Articles-text , .Articles-info{
+    text-align: center;
 }
