--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,9 +1,10 @@
 
 .navbar{
  width: 100%;
- height: 60px;
+ height: 70px;
    background-color: #FFFFFF;
-   position: sticky;
+   z-index: 999;
+   position: fixed;
    padding-top: 7px;
 }
 .navbar .container , .nav-lists{
@@ -13,9 +14,21 @@
 }
 .nav-list{
     padding: 3px 45px;
+    transition: all  1s ease;
 }
 .nav-link{
     color: #3D3B69;
+
+}
+.nav-list:hover{
+    color: #4e4b8d;
+    transform: scale(1.1);
+}
+.nav-logo{
+    transition: all 0.7s ease;
+}
+.nav-logo:hover{
+    transform: scale(1.05);
 }
 .nav-select{
     width: 100px;
@@ -23,4 +36,58 @@
     border: 2px solid #3D3B69;
     border-radius: 8px;
 }
-
+.hamburger{
+    display: none;
+}
+/* media */
+@media screen and (max-width: 1200px) {
+   .nav-list{
+       padding: 3px 30px;
+   }
+}
+@media screen and (max-width: 1050px) {
+   .nav-list{
+       padding: 3px 20px;
+   }
+   .nav-select{
+       width: 90px;
+       height: 35px;
+   }
+ }
+ @media screen and (max-width: 890px) {
+    .nav-list{
+        padding: 3px 10px;
+    }
+    .nav-select{
+        width: 90px;
+        height: 35px;
+    }
+}
+@media screen and (max-width: 780px) {
+    .nav-list{
+      display: none;
+    }
+    .nav-select{
+        width: 120px;
+        height: 35px;
+        margin-left: 170px;
+    }
+}
+@media screen and (max-width: 656px) {
+    .nav-select{
+        width: 120px;
+        height: 35px;
+        margin-left: 50px;
+    }
+}
+@media screen and (max-width: 540px) {
+    .nav-select{
+     display: none;
+    }
+    .nav-btn{
+        display: none;
+    }
+    .hamburger{
+        display: block;
+    }
+}
