--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -47,6 +47,114 @@ padding: 5px 0;
     justify-content: center;
     margin: 10px;
 }
+@media screen and (max-width:1340px){
+.about-img{
+width: 400px;
+}
+}
+
+@media screen and (max-width:1248px){
+  .about-img{
+  width: 370px;
+  }
+  }
+  @media screen and (max-width:1172px){
+    .about-img{
+    width: 330px;
+    }
+    }
+    @media screen and (max-width:1086px){
+      .about-img{
+      width: 300px;
+      }
+      }
+      @media screen and (max-width:980px){
+      .about-cards{
+          display: block;
+      }
+      .about-img{
+      width: 730px;
+      height: 400px;
+      }
+      .about-img:hover{
+          transform: scale(.96);
+      }
+        }
+        @media screen and (max-width:765px){
+          .about-img{
+          width: 650px;
+          height: 400px;
+          }
+            }
+            @media screen and (max-width:688px){
+              .about-img{
+              width: 550px;
+              }
+                }
+   @media screen and (max-width:688px){
+   .about-img{
+   width: 470px;
+   height: 360px;
+      }
+    }
+    @media screen and (max-width:510px){
+      .about-img{
+      width: 400px;
+      height: 320px;
+         }
+       }            
+       @media screen and (max-width:445px){
+        .about-img{
+        width: 350px;
+        height: 260px;
+           }
+           .about-subtitle{
+            width: 300px;
+        }
+         }   
+         @media screen and (max-width:397px){
+          .about-img{
+          width: 280px;
+          height: 180px;
+             }
+             .about-subtitle{
+              width: 230px;
+          }
+          .about-info{
+            font-size: 16px;
+          }
+           }   
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* HTML: <div class="loader"></div> */
 .loader {
     --c1:#673b14;
