--- a/src/Pages/HomePages/HomePages.css
+++ b/src/Pages/HomePages/HomePages.css
@@ -2,6 +2,7 @@
     width: 100%;
 }
 .home-pages .container{
+    margin-top: 5px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -35,4 +36,149 @@ padding-top: 3px;
 .home-right{
     width: 700px;
     height: 645px;
+}
+@media screen and (max-width: 1200px) {
+    .home-right{
+        width: 600px;
+        height: 545px;
+    }
+}
+@media screen and (max-width: 1050px) {
+    .home-left{
+        margin-top: 150px;
+    }
+    .home-text{
+        width: 400px;
+    }
+    .home-right{
+        width: 470px;
+        height: 545px;
+    }
+}
+@media screen and (max-width: 910px) {
+    .home-left{
+        margin-top: 150px;
+    }
+    .home-title{
+        padding: 10px 0;
+    }
+    .home-text{
+        width: 350px;
+       padding: 10px 0;
+    }
+    .home-button{
+        justify-content: left;
+    }
+    .home-right{
+        width: 440px;
+        height: 500px;
+    }
+}
+@media screen and (max-width: 803px) {
+    .home-pages .container{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .home-left{
+        margin-top: 70px;
+        text-align: center;
+    }
+    .flex{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .home-text{
+        width: 650px;
+       padding: 10px 0;
+    }
+    .home-button{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .home-title{
+        padding: 20px 0;
+    }
+    .home-right{
+        width: 550px;
+        height: 500px;
+    }
+}
+@media screen and (max-width: 690px) {
+    .home-left{
+        margin-top: 70px;
+    }
+    .home-title{
+        padding: 10px 0;
+    }
+    .home-text{
+        width: 550px;
+       padding: 20px 0;
+    }
+    .home-button{
+        justify-content: space-evenly;
+    }
+    .home-right{
+        width: 500px;
+        height: 500px;
+    }
+}
+@media screen and (max-width: 590px) {
+    .home-text{
+        width: 450px;
+    }
+    .home-button{
+        justify-content: space-evenly;
+    }
+    .button-img{
+        width: 70px;
+    }
+    .home-right{
+        width: 460px;
+        height: 460px;
+    }
+}
+@media screen and (max-width: 476px) {
+    .home-left{
+        margin-top: 80px;
+    }
+    .home-title{
+        padding: 10px 0;
+        width: 300px;
+        font-size: 24px;
+    }
+    .home-text{
+        width: 300px;
+        font-size: 16px;
+       padding: 10px 0;
+    }
+    .home-right{
+        width: 360px;
+        height: 360px;
+    }
+  .button-img{
+    display: none;
+  }
+
+}
+@media screen and (max-width: 376px) {
+    .home-left{
+        margin-top: 80px;
+    }
+    .home-title{
+        width: 260px;
+    }
+    .home-text{
+        width: 260px;
+    }
+    .home-right{
+        width: 260px;
+        height: 260px;
+    }
+  .button-img{
+    display: none;
+  }
 }
