--- a/src/Pages/Services/Services.css
+++ b/src/Pages/Services/Services.css
@@ -1,100 +1,209 @@
-.service-top{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 20px 0;
+.service-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 0;
 }
 
-.services-cards{
+.services-cards {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.services-img {
+  width: 430px;
+  height: 300px;
+  border-radius: 25px;
+  padding: 5px 0;
+  transition: all 0.7s ease;
+}
+.services-img:hover {
+  transform: scale(0.96);
+}
+.services-text {
+  color: #211f54;
+  padding: 5px 0;
+  text-align: center;
+}
+.services-info {
+  color: #6e7191;
+  text-align: center;
+}
+.services-btns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0;
+  gap: 20px;
+}
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px 0;
+}
+@media screen and (max-width: 1342px) {
+  .services-img {
+    width: 400px;
+  }
+}
+@media screen and (max-width: 1253px) {
+  .services-img {
+    width: 360px;
+  }
+}
+@media screen and (max-width: 1137px) {
+  .services-img {
+    width: 320px;
+  }
+}
+@media screen and (max-width: 1016px) {
+  .services-img {
+    width: 305px;
+  }
+}
+@media screen and (max-width: 980px) {
+  .service-top {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
-}
-.services-img{
-width: 430px;
-height: 300px;
-border-radius: 25px;
-padding: 5px 0;
-transition: all 0.7s ease;
-}
-.services-img:hover{
-    transform: scale(0.9);
-}
-.services-text{
-color:#211F54;
-padding: 5px 0;
-text-align: center;
-}
-.services-info{
-    color: #6E7191;
-    text-align: center;
-}
-.services-btns{
-    display:flex;
-    align-items: center;
-    justify-content: center;
     margin: 20px 0;
-    gap: 20px;
-}
-.wrapper{
+  }
+  .service-btn{
+    display: none;
+  }
+
+  .services-cards {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    margin: 10px 0;
+  }
+  .services-text{
+    font-size: 26px;
+  }
+  .services-img {
+    width: 700px;
+    height: 400px;
+  }
+}
+@media screen and (max-width: 756px) {
+  .services-text{
+    font-size: 24px;
+  }
+  .services-img {
+    width: 600px;
+    height: 380px;
+  }
+}
+@media screen and (max-width: 648px) {
+  .services-img {
+    width: 550px;
+  }
+}
+@media screen and (max-width: 588px) {
+  .services-img {
+    width: 450px;
+    height: 300px;
+  }
+}
+@media screen and (max-width: 490px) {
+  .services-img {
+    width: 380px;
+    height: 280px;
+  }
+}
+@media screen and (max-width: 430px) {
+  .services-img {
+    width: 300px;
+    height: 225px;
+  }
+  .services-text{
+    font-size: 20px;
+  }
+  .services-info{
+    font-size: 16px;
+    width: 320px;
+  }
+}
+@media screen and (max-width: 350px) {
+  .services-img {
+    width: 270px;
+    height: 200px;
+  }
+  .services-info{
+    font-size: 16px;
+    width: 270px;
+  }
 }
 /* loader */
 /* HTML: <div class="loader"></div> */
 /* HTML: <div class="loader"></div> */
 .loader {
-    --c1:#673b14;
-    --c2:#f8b13b;
-    width: 40px;
-    height: 80px;
-    border-top: 4px solid var(--c1);
-    border-bottom: 4px solid var(--c1);
-    background: linear-gradient(90deg, var(--c1) 2px, var(--c2) 0 5px,var(--c1) 0) 50%/7px 8px no-repeat;
-    display: grid;
-    overflow: hidden;
-    animation: l5-0 2s infinite linear;
+  --c1: #673b14;
+  --c2: #f8b13b;
+  width: 40px;
+  height: 80px;
+  border-top: 4px solid var(--c1);
+  border-bottom: 4px solid var(--c1);
+  background: linear-gradient(
+      90deg,
+      var(--c1) 2px,
+      var(--c2) 0 5px,
+      var(--c1) 0
+    )
+    50%/7px 8px no-repeat;
+  display: grid;
+  overflow: hidden;
+  animation: l5-0 2s infinite linear;
+}
+.loader::before,
+.loader::after {
+  content: "";
+  grid-area: 1/1;
+  width: 75%;
+  height: calc(50% - 4px);
+  margin: 0 auto;
+  border: 2px solid var(--c1);
+  border-top: 0;
+  box-sizing: content-box;
+  border-radius: 0 0 40% 40%;
+  -webkit-mask: linear-gradient(#000 0 0) bottom/4px 2px no-repeat,
+    linear-gradient(#000 0 0);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
+  background: linear-gradient(var(--d, 0deg), var(--c2) 50%, #0000 0) bottom /
+      100% 205%,
+    linear-gradient(var(--c2) 0 0) center/0 100%;
+  background-repeat: no-repeat;
+  animation: inherit;
+  animation-name: l5-1;
+}
+.loader::after {
+  transform-origin: 50% calc(100% + 2px);
+  transform: scaleY(-1);
+  --s: 3px;
+  --d: 180deg;
+}
+@keyframes l5-0 {
+  80% {
+    transform: rotate(0);
   }
-  .loader::before,
-  .loader::after {
-    content: "";
-    grid-area: 1/1;
-    width: 75%;
-    height: calc(50% - 4px);
-    margin: 0 auto;
-    border: 2px solid var(--c1);
-    border-top: 0;
-    box-sizing: content-box;
-    border-radius: 0 0 40% 40%;
-    -webkit-mask: 
-      linear-gradient(#000 0 0) bottom/4px 2px no-repeat,
-      linear-gradient(#000 0 0);
-    -webkit-mask-composite: destination-out;
-            mask-composite: exclude;
-    background: 
-      linear-gradient(var(--d,0deg),var(--c2) 50%,#0000 0) bottom /100% 205%,
-      linear-gradient(var(--c2) 0 0) center/0 100%;
-    background-repeat: no-repeat;
-    animation: inherit;
-    animation-name: l5-1;
+  100% {
+    transform: rotate(0.5turn);
   }
-  .loader::after {
-    transform-origin: 50% calc(100% + 2px);
-    transform: scaleY(-1);
-    --s:3px;
-    --d:180deg;
+}
+@keyframes l5-1 {
+  10%,
+  70% {
+    background-size: 100% 205%, var(--s, 0) 100%;
   }
-  @keyframes l5-0 {
-    80%  {transform: rotate(0)}
-    100% {transform: rotate(0.5turn)}
+  70%,
+  100% {
+    background-position: top, center;
   }
-  @keyframes l5-1 {
-    10%,70%  {background-size:100% 205%,var(--s,0) 100%}
-    70%,100% {background-position: top,center}
-  }
-  .loader-text{
-    text-align: center;
-    padding: 5px 0;
-  }
+}
+.loader-text {
+  text-align: center;
+  padding: 5px 0;
+}
