--- a/src/Pages/Articles/Articles.css
+++ b/src/Pages/Articles/Articles.css
@@ -1,95 +1,204 @@
-.Articles{
-    margin: 30px;
-    padding: 10px 0;
+.Articles {
+  margin: 30px;
+  padding: 10px 0;
 }
-.Articles-top{
+.Articles-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.Articles-btns {
+  display: flex;
+  gap: 50px;
+}
+.Articles-cards {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.Article-card {
+  margin: 20px 0;
+  width: 550px;
+  height: 370px;
+}
+.Articles-img {
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+  transition: all 0.7s ease;
+}
+.Articles-img:hover {
+  transform: scale(1.02);
+}
+.Articles-text,
+.Articles-info {
+  text-align: center;
+}
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px 0;
+}
+@media screen and (max-width: 1215px) {
+  .Article-card {
+    width: 400px;
+    height: 320px;
+  }
+  .Articles-img {
+    width: 100%;
+    height: 250px;
+  }
+}
+@media screen and (max-width: 980px) {
+  .Articles-cards {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.Articles-btns{
-    display: flex;
-    gap: 50px;
-}
-.Articles-cards{
-    display: flex;
-    align-items: center;
-    justify-content: space-between ;
-}
-.Article-card{
-    margin: 20px 0;
-    width: 500px;
-    height: 370px;
-}
-.Articles-img{
-    width:  100%;
-    border-radius: 10px;
-    transition: all 0.7s ease;
-}
-.Articles-img:hover{
-    transform: scale(1.02);
-}
-.Articles-text , .Articles-info{
-    text-align: center;
-}
-.wrapper{
-    display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    margin: 10px 0;
+  }
+  .Article-card {
+    width: 700px;
+    height: 400px;
+  }
+  .Articles-img {
+    height: 350px;
+  }
 }
+@media screen and (max-width: 700px) {
+  .Article-card {
+    width: 600px;
+    height: 300px;
+  }
+  .Articles-img {
+    height: 250px;
+  }
+}
+@media screen and (max-width: 570px) {
+  .Article-card {
+    width: 500px;
+    height: 250px;
+  }
+  .Articles-img {
+    height: 200px;
+  }
+  }
+  @media screen and (max-width: 515px) {
+    .Article-card {
+      width: 500px;
+      height: 250px;
+    }
+    .Articles-img {
+      height: 200px;
+    }
+    .Articles-top {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+    }
+    .Articles-btns{
+      padding: 10px 0;
+    }
+    }
+    @media screen and (max-width: 450px) {
+      .Article-card {
+        width: 400px;
+        height: 250px;
+      }
+      .Articles-img {
+        height: 170px;
+      }
+      .Articles-info{
+        font-size: 14px;
+      }
+      .Articles-btns{
+        padding: 10px 0;
+        gap: 5px;
+      }
+      }
+      @media screen and (max-width: 350px) {
+        .Article-card {
+          width: 350px;
+          height: 250px;
+        }
+        .Articles-img {
+          height: 200px;
+        }
+        .Articles-info{
+          font-size: 14px;
+        }
+        .Articles-btns{
+         display: none;
+        }
+        }
 
 /* HTML: <div class="loader"></div> */
 .loader {
-    --c1:#673b14;
-    --c2:#f8b13b;
-    width: 40px;
-    height: 80px;
-    border-top: 4px solid var(--c1);
-    border-bottom: 4px solid var(--c1);
-    background: linear-gradient(90deg, var(--c1) 2px, var(--c2) 0 5px,var(--c1) 0) 50%/7px 8px no-repeat;
-    display: grid;
-    overflow: hidden;
-    animation: l5-0 2s infinite linear;
+  --c1: #673b14;
+  --c2: #f8b13b;
+  width: 40px;
+  height: 80px;
+  border-top: 4px solid var(--c1);
+  border-bottom: 4px solid var(--c1);
+  background: linear-gradient(
+      90deg,
+      var(--c1) 2px,
+      var(--c2) 0 5px,
+      var(--c1) 0
+    )
+    50%/7px 8px no-repeat;
+  display: grid;
+  overflow: hidden;
+  animation: l5-0 2s infinite linear;
+}
+.loader::before,
+.loader::after {
+  content: "";
+  grid-area: 1/1;
+  width: 75%;
+  height: calc(50% - 4px);
+  margin: 0 auto;
+  border: 2px solid var(--c1);
+  border-top: 0;
+  box-sizing: content-box;
+  border-radius: 0 0 40% 40%;
+  -webkit-mask: linear-gradient(#000 0 0) bottom/4px 2px no-repeat,
+    linear-gradient(#000 0 0);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
+  background: linear-gradient(var(--d, 0deg), var(--c2) 50%, #0000 0) bottom /
+      100% 205%,
+    linear-gradient(var(--c2) 0 0) center/0 100%;
+  background-repeat: no-repeat;
+  animation: inherit;
+  animation-name: l5-1;
+}
+.loader::after {
+  transform-origin: 50% calc(100% + 2px);
+  transform: scaleY(-1);
+  --s: 3px;
+  --d: 180deg;
+}
+@keyframes l5-0 {
+  80% {
+    transform: rotate(0);
   }
-  .loader::before,
-  .loader::after {
-    content: "";
-    grid-area: 1/1;
-    width: 75%;
-    height: calc(50% - 4px);
-    margin: 0 auto;
-    border: 2px solid var(--c1);
-    border-top: 0;
-    box-sizing: content-box;
-    border-radius: 0 0 40% 40%;
-    -webkit-mask: 
-      linear-gradient(#000 0 0) bottom/4px 2px no-repeat,
-      linear-gradient(#000 0 0);
-    -webkit-mask-composite: destination-out;
-            mask-composite: exclude;
-    background: 
-      linear-gradient(var(--d,0deg),var(--c2) 50%,#0000 0) bottom /100% 205%,
-      linear-gradient(var(--c2) 0 0) center/0 100%;
-    background-repeat: no-repeat;
-    animation: inherit;
-    animation-name: l5-1;
+  100% {
+    transform: rotate(0.5turn);
   }
-  .loader::after {
-    transform-origin: 50% calc(100% + 2px);
-    transform: scaleY(-1);
-    --s:3px;
-    --d:180deg;
+}
+@keyframes l5-1 {
+  10%,
+  70% {
+    background-size: 100% 205%, var(--s, 0) 100%;
   }
-  @keyframes l5-0 {
-    80%  {transform: rotate(0)}
-    100% {transform: rotate(0.5turn)}
+  70%,
+  100% {
+    background-position: top, center;
   }
-  @keyframes l5-1 {
-    10%,70%  {background-size:100% 205%,var(--s,0) 100%}
-    70%,100% {background-position: top,center}
-  }
-  .loader-text{
-    text-align: center;
-    padding: 5px 0;
-  }
+}
+.loader-text {
+  text-align: center;
+  padding: 5px 0;
+}
