--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -3,7 +3,7 @@
     align-items: center;
     background:  #F7F9FC;
     justify-content: space-evenly;
-    padding-top: 10px;
+    padding: 20px 0;
  
 }
 /* contact-left */
@@ -129,7 +129,7 @@ padding: 20px;
 }
 @media screen and (max-width:760px ){
     .contact-left{
-        width: 600px;
+        width: 550px;
        padding: 20px 15px;
     }
     .contact-information{
@@ -139,14 +139,14 @@ padding: 20px;
         width:60px;
         height: 60px;
     }
-    
     .contact-right{
-            width: 600px;
-            height: 550px;
+        margin-top: -100px;
+            width: 550px;
+            height: 600px;
     }
     .form-input{
-        width: 190px;
-    height: 50px;
+        width: 160px;
+      height: 50px;
     }
 }
 @media screen and (max-width:600px ){
@@ -206,5 +206,73 @@ padding: 20px;
     .form-input{
         width: 130px;
       height: 30px;
+    }
+}
+@media screen and (max-width:545px ){
+    .contact-left{
+        width: 370px;
+    }
+    .contact-information{
+        gap: 20px;
+    }
+    .contact-right{
+        margin-top: -50px;
+            width: 370px;
+            height: 500px;
+    }
+    .form-input{
+    width: 120px;
+    height: 30px;
+    margin: 10px 0;
+    padding: 10px;
+    }
+    .form-button{
+        display: flex;
+        flex-direction: column;
+    }
+    .form-textarea{
+        margin:30px 0;
+    }
+}
+@media screen and (max-width:488px ){
+    .contact-left{
+        width: 300px;
+    }
+    .contact-information{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+    .contact-right{
+        margin-top: -50px;
+            width: 300px;
+            height: 470px;
+    }
+    .form-input{
+    width: 80px;
+    height: 10px;
+    margin: 5px 0;
+    padding: 11px;
+    }
+    .form-textarea{
+        margin:20px 0;
+    }
+}
+@media screen and (max-width:356px ){
+    .contact-left{
+        width: 260px;
+    }
+    .contact-right{
+        margin-top: -50px;
+            width: 260px;
+            height: 470px;
+    }
+    .form-input{
+    width: 60px;
+    height: 13px;
+    }
+    .form-textarea{
+        margin:20px 0;
     }
 }
