reload responsive add HomePage.jsx

--- a/src/Pages/HomePages/HomePages.css
+++ b/src/Pages/HomePages/HomePages.css
@@ -175,6 +175,7 @@ padding-top: 3px;
         width: 260px;
     }
     .home-right{
+        margin-top: 10px;
         width: 260px;
         height: 260px;
     }
