--- a/src/Pages/Footer/Footer.css
+++ b/src/Pages/Footer/Footer.css
@@ -1,9 +1,10 @@
-.footer-top{
+ .footer-top{
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top:30px ;
 }
+
 .footer-info , .footer-connect , .footer-hours , .footer-data{
     width: 300px;
     height: 200px;
@@ -134,7 +135,7 @@ color: #6E7191;
 @media screen and (max-width : 406px) {
     .footer-info , .footer-connect , .footer-hours , .footer-data{
         width: 300px;
-        height: 240px;
+        height: 200px;
     }
     .footer-lists{
         font-size: 14px;
@@ -144,9 +145,13 @@ color: #6E7191;
     }
 }
 @media screen and (max-width : 350px) {
-    .footer-info , .footer-connect , .footer-hours , .footer-data{
+    .footer-info , .footer-connect {
         width: 250px;
-        height: 240px;
+        height: 190px;
+    }
+    .footer-hours , .footer-data{
+        width: 250px;
+        height: 250px;
     }
     .footer-lists{
         font-size: 14px;
